# best-python

./: .gitignore  LICENSE  README.md  call_mem_with_brainstorm_data.ipynb  call_mem_with_mne_data.ipynb  detail-options.txt  get_matlab_version.py  pyproject.toml  run_MEM.m  setup.py
bestpython/: __init__.py  get_options.py  matlab_wrapper.py  mem_options.py  solver.py
src/best_python/: matlab_wrapper.py  solver.py
tests/: test.py
