[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "best_python"
version = "0.0.1"
authors = [
  { name="MultiFunkIm Lab", email="christophe.grova@concordia.ca" },
]
description = "A python wrapper for the MEM source method"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ilianAZZ/best-python"
Issues = "https://github.com/ilianAZZ/best-python/issues"
